camel routes and code fix